--- a/23.08.09/board/view.html
+++ b/23.08.09/board/view.html
@@ -14,20 +14,20 @@
     <ul>
         <li>
             <span>제목</span>
-            <span>제목입니다.</span>
+            <span id="title"></span>
         </li>
         <li>
             <span>작성자</span>
-            <span>작성자다</span>
+            <span id="writer"></span>
         </li>
         <li>
-            <span>내용이다</span>
+            <span id="content"></span>
         </li>
     </ul>
 
-    <a href="./list.html">목록</button>
-    <a href="./modify.html">글수정</button>
-    <a href="#">글삭제</button>
+    <a href="./list.html" class="btn">목록</button>
+    <a href="./modify.html" class="btn">글수정</button>
+    <a href="#" class="btn">글삭제</button>
 
 </body>
 </html>
