--- a/23.06.20/index.html
+++ b/23.06.20/index.html
@@ -45,7 +45,7 @@
               <img src="public/imgs/speech_bg.png" alt="" />
               <div>
                 <img src="public/imgs/review_star5.png" alt="" />
-                <p>비정공자인 저도 했습니다.<br />모두 취업하세요!</p>
+                <p>비전공자인 저도 했습니다.<br />모두 취업하세요!</p>
                 <p>플밍35기 이지우</p>
                 <div class="picture"></div>
               </div>
@@ -63,7 +63,7 @@
               <img src="public/imgs/speech_bg.png" alt="" />
               <div>
                 <img src="public/imgs/review_star5.png" alt="" />
-                <p>비정공자인 저도 했습니다.<br />모두 취업하세요!</p>
+                <p>비전공자인 저도 했습니다.<br />모두 취업하세요!</p>
                 <p>플밍35기 최윤화</p>
                 <div class="picture"></div>
               </div>
@@ -90,7 +90,7 @@
               <img src="public/imgs/speech_bg.png" alt="" />
               <div>
                 <img src="public/imgs/review_star5.png" alt="" />
-                <p>비정공자인 저도 했습니다.<br />모두 취업하세요!</p>
+                <p>비전공자인 저도 했습니다.<br />모두 취업하세요!</p>
                 <p>플밍35기 이지우</p>
                 <div class="picture"></div>
               </div>
@@ -99,7 +99,7 @@
               <img src="public/imgs/speech_bg.png" alt="" />
               <div>
                 <img src="public/imgs/review_star5.png" alt="" />
-                <p>비정공자인 저도 했습니다.<br />모두 취업하세요!</p>
+                <p>비전공자인 저도 했습니다.<br />모두 취업하세요!</p>
                 <p>플밍35기 이지우</p>
                 <div class="picture"></div>
               </div>
@@ -117,7 +117,7 @@
               <img src="public/imgs/speech_bg.png" alt="" />
               <div>
                 <img src="public/imgs/review_star5.png" alt="" />
-                <p>비정공자인 저도 했습니다.<br />모두 취업하세요!</p>
+                <p>비전공자인 저도 했습니다.<br />모두 취업하세요!</p>
                 <p>플밍35기 최윤화</p>
                 <div class="picture"></div>
               </div>
@@ -144,7 +144,7 @@
               <img src="public/imgs/speech_bg.png" alt="" />
               <div>
                 <img src="public/imgs/review_star5.png" alt="" />
-                <p>비정공자인 저도 했습니다.<br />모두 취업하세요!</p>
+                <p>비전공자인 저도 했습니다.<br />모두 취업하세요!</p>
                 <p>플밍35기 이지우</p>
                 <div class="picture"></div>
               </div>
